pkg/parser/jsonfilter/parser/jsonfilter_parser.go
// Code generated from JSONFilter.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // JSONFilter

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'$.'", "'*'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "'&&'",
	"'||'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", "'IS'", "'NOT'", "'NULL'",
	"'EXISTS'", "'TRUE'", "'FALSE'",
}
var symbolicNames = []string{
	"", "SEL_START", "STAR", "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LBRACKET",
	"RBRACKET", "DOT", "AND", "OR", "EQUALS", "NOT_EQUALS", "GT", "LT", "GE",
	"LE", "IS", "NOT", "NULL", "EXISTS", "TRUE", "FALSE", "INDENTIFIER", "STRING",
	"NUMBER", "WS",
}

var ruleNames = []string{
	"awsjsonfilter", "dotnotation", "filter_expr", "exp", "selector", "qualifiedidentifier",
	"member", "operator", "literal",
}

type JSONFilterParser struct {
	*antlr.BaseParser
}

// NewJSONFilterParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *JSONFilterParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewJSONFilterParser(input antlr.TokenStream) *JSONFilterParser {
	this := new(JSONFilterParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.Deserialize(uint16Toint32(parserATN))
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "JSONFilter.g4"

	return this
}

// JSONFilterParser tokens.
const (
	JSONFilterParserEOF         = antlr.TokenEOF
	JSONFilterParserSEL_START   = 1
	JSONFilterParserSTAR        = 2
	JSONFilterParserLCURLY      = 3
	JSONFilterParserRCURLY      = 4
	JSONFilterParserLPAREN      = 5
	JSONFilterParserRPAREN      = 6
	JSONFilterParserLBRACKET    = 7
	JSONFilterParserRBRACKET    = 8
	JSONFilterParserDOT         = 9
	JSONFilterParserAND         = 10
	JSONFilterParserOR          = 11
	JSONFilterParserEQUALS      = 12
	JSONFilterParserNOT_EQUALS  = 13
	JSONFilterParserGT          = 14
	JSONFilterParserLT          = 15
	JSONFilterParserGE          = 16
	JSONFilterParserLE          = 17
	JSONFilterParserIS          = 18
	JSONFilterParserNOT         = 19
	JSONFilterParserNULL        = 20
	JSONFilterParserEXISTS      = 21
	JSONFilterParserTRUE        = 22
	JSONFilterParserFALSE       = 23
	JSONFilterParserINDENTIFIER = 24
	JSONFilterParserSTRING      = 25
	JSONFilterParserNUMBER      = 26
	JSONFilterParserWS          = 27
)

// JSONFilterParser rules.
const (
	JSONFilterParserRULE_awsjsonfilter       = 0
	JSONFilterParserRULE_dotnotation         = 1
	JSONFilterParserRULE_filter_expr         = 2
	JSONFilterParserRULE_exp                 = 3
	JSONFilterParserRULE_selector            = 4
	JSONFilterParserRULE_qualifiedidentifier = 5
	JSONFilterParserRULE_member              = 6
	JSONFilterParserRULE_operator            = 7
	JSONFilterParserRULE_literal             = 8
)

// IAwsjsonfilterContext is an interface to support dynamic dispatch.
type IAwsjsonfilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAwsjsonfilterContext differentiates from other interfaces.
	IsAwsjsonfilterContext()
}

type AwsjsonfilterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAwsjsonfilterContext() *AwsjsonfilterContext {
	var p = new(AwsjsonfilterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_awsjsonfilter
	return p
}

func (*AwsjsonfilterContext) IsAwsjsonfilterContext() {}

func NewAwsjsonfilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AwsjsonfilterContext {
	var p = new(AwsjsonfilterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_awsjsonfilter

	return p
}

func (s *AwsjsonfilterContext) GetParser() antlr.Parser { return s.parser }

func (s *AwsjsonfilterContext) Dotnotation() IDotnotationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDotnotationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDotnotationContext)
}

func (s *AwsjsonfilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AwsjsonfilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AwsjsonfilterContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitAwsjsonfilter(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Awsjsonfilter() (localctx IAwsjsonfilterContext) {
	localctx = NewAwsjsonfilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JSONFilterParserRULE_awsjsonfilter)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.Dotnotation()
	}

	return localctx
}

// IDotnotationContext is an interface to support dynamic dispatch.
type IDotnotationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDotnotationContext differentiates from other interfaces.
	IsDotnotationContext()
}

type DotnotationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDotnotationContext() *DotnotationContext {
	var p = new(DotnotationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_dotnotation
	return p
}

func (*DotnotationContext) IsDotnotationContext() {}

func NewDotnotationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DotnotationContext {
	var p = new(DotnotationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_dotnotation

	return p
}

func (s *DotnotationContext) GetParser() antlr.Parser { return s.parser }

func (s *DotnotationContext) LCURLY() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserLCURLY, 0)
}

func (s *DotnotationContext) Filter_expr() IFilter_exprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFilter_exprContext)
}

func (s *DotnotationContext) RCURLY() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserRCURLY, 0)
}

func (s *DotnotationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DotnotationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DotnotationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitDotnotation(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Dotnotation() (localctx IDotnotationContext) {
	localctx = NewDotnotationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JSONFilterParserRULE_dotnotation)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(20)
		p.Match(JSONFilterParserLCURLY)
	}
	{
		p.SetState(21)
		p.filter_expr(0)
	}
	{
		p.SetState(22)
		p.Match(JSONFilterParserRCURLY)
	}

	return localctx
}

// IFilter_exprContext is an interface to support dynamic dispatch.
type IFilter_exprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilter_exprContext differentiates from other interfaces.
	IsFilter_exprContext()
}

type Filter_exprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilter_exprContext() *Filter_exprContext {
	var p = new(Filter_exprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_filter_expr
	return p
}

func (*Filter_exprContext) IsFilter_exprContext() {}

func NewFilter_exprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Filter_exprContext {
	var p = new(Filter_exprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_filter_expr

	return p
}

func (s *Filter_exprContext) GetParser() antlr.Parser { return s.parser }

func (s *Filter_exprContext) CopyFrom(ctx *Filter_exprContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Filter_exprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_exprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type Filter_expr_parenthesizedContext struct {
	*Filter_exprContext
}

func NewFilter_expr_parenthesizedContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Filter_expr_parenthesizedContext {
	var p = new(Filter_expr_parenthesizedContext)

	p.Filter_exprContext = NewEmptyFilter_exprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Filter_exprContext))

	return p
}

func (s *Filter_expr_parenthesizedContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_expr_parenthesizedContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserLPAREN, 0)
}

func (s *Filter_expr_parenthesizedContext) Filter_expr() IFilter_exprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFilter_exprContext)
}

func (s *Filter_expr_parenthesizedContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserRPAREN, 0)
}

func (s *Filter_expr_parenthesizedContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitFilter_expr_parenthesized(s)

	default:
		return t.VisitChildren(s)
	}
}

type Filter_expr_andContext struct {
	*Filter_exprContext
	lhs IFilter_exprContext
	rhs IFilter_exprContext
}

func NewFilter_expr_andContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Filter_expr_andContext {
	var p = new(Filter_expr_andContext)

	p.Filter_exprContext = NewEmptyFilter_exprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Filter_exprContext))

	return p
}

func (s *Filter_expr_andContext) GetLhs() IFilter_exprContext { return s.lhs }

func (s *Filter_expr_andContext) GetRhs() IFilter_exprContext { return s.rhs }

func (s *Filter_expr_andContext) SetLhs(v IFilter_exprContext) { s.lhs = v }

func (s *Filter_expr_andContext) SetRhs(v IFilter_exprContext) { s.rhs = v }

func (s *Filter_expr_andContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_expr_andContext) AND() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserAND, 0)
}

func (s *Filter_expr_andContext) AllFilter_expr() []IFilter_exprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem())
	var tst = make([]IFilter_exprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFilter_exprContext)
		}
	}

	return tst
}

func (s *Filter_expr_andContext) Filter_expr(i int) IFilter_exprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFilter_exprContext)
}

func (s *Filter_expr_andContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitFilter_expr_and(s)

	default:
		return t.VisitChildren(s)
	}
}

type Filter_expr_expContext struct {
	*Filter_exprContext
}

func NewFilter_expr_expContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Filter_expr_expContext {
	var p = new(Filter_expr_expContext)

	p.Filter_exprContext = NewEmptyFilter_exprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Filter_exprContext))

	return p
}

func (s *Filter_expr_expContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_expr_expContext) Exp() IExpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *Filter_expr_expContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitFilter_expr_exp(s)

	default:
		return t.VisitChildren(s)
	}
}

type Filter_expr_orContext struct {
	*Filter_exprContext
	lhs IFilter_exprContext
	rhs IFilter_exprContext
}

func NewFilter_expr_orContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Filter_expr_orContext {
	var p = new(Filter_expr_orContext)

	p.Filter_exprContext = NewEmptyFilter_exprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Filter_exprContext))

	return p
}

func (s *Filter_expr_orContext) GetLhs() IFilter_exprContext { return s.lhs }

func (s *Filter_expr_orContext) GetRhs() IFilter_exprContext { return s.rhs }

func (s *Filter_expr_orContext) SetLhs(v IFilter_exprContext) { s.lhs = v }

func (s *Filter_expr_orContext) SetRhs(v IFilter_exprContext) { s.rhs = v }

func (s *Filter_expr_orContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_expr_orContext) OR() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserOR, 0)
}

func (s *Filter_expr_orContext) AllFilter_expr() []IFilter_exprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem())
	var tst = make([]IFilter_exprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFilter_exprContext)
		}
	}

	return tst
}

func (s *Filter_expr_orContext) Filter_expr(i int) IFilter_exprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_exprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFilter_exprContext)
}

func (s *Filter_expr_orContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitFilter_expr_or(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Filter_expr() (localctx IFilter_exprContext) {
	return p.filter_expr(0)
}

func (p *JSONFilterParser) filter_expr(_p int) (localctx IFilter_exprContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewFilter_exprContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IFilter_exprContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, JSONFilterParserRULE_filter_expr, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(30)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case JSONFilterParserLPAREN:
		localctx = NewFilter_expr_parenthesizedContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx

		{
			p.SetState(25)
			p.Match(JSONFilterParserLPAREN)
		}
		{
			p.SetState(26)
			p.filter_expr(0)
		}
		{
			p.SetState(27)
			p.Match(JSONFilterParserRPAREN)
		}

	case JSONFilterParserSEL_START:
		localctx = NewFilter_expr_expContext(p, localctx)
		p.SetParserRuleContext(localctx)
		_prevctx = localctx
		{
			p.SetState(29)
			p.Exp()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(38)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
			case 1:
				localctx = NewFilter_expr_andContext(p, NewFilter_exprContext(p, _parentctx, _parentState))
				localctx.(*Filter_expr_andContext).lhs = _prevctx

				p.PushNewRecursionContext(localctx, _startState, JSONFilterParserRULE_filter_expr)
				p.SetState(32)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(33)
					p.Match(JSONFilterParserAND)
				}
				{
					p.SetState(34)

					var _x = p.filter_expr(4)

					localctx.(*Filter_expr_andContext).rhs = _x
				}

			case 2:
				localctx = NewFilter_expr_orContext(p, NewFilter_exprContext(p, _parentctx, _parentState))
				localctx.(*Filter_expr_orContext).lhs = _prevctx

				p.PushNewRecursionContext(localctx, _startState, JSONFilterParserRULE_filter_expr)
				p.SetState(35)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
				}
				{
					p.SetState(36)
					p.Match(JSONFilterParserOR)
				}
				{
					p.SetState(37)

					var _x = p.filter_expr(3)

					localctx.(*Filter_expr_orContext).rhs = _x
				}

			}

		}
		p.SetState(42)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// IExpContext is an interface to support dynamic dispatch.
type IExpContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpContext differentiates from other interfaces.
	IsExpContext()
}

type ExpContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpContext() *ExpContext {
	var p = new(ExpContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_exp
	return p
}

func (*ExpContext) IsExpContext() {}

func NewExpContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpContext {
	var p = new(ExpContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_exp

	return p
}

func (s *ExpContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpContext) Selector() ISelectorContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelectorContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelectorContext)
}

func (s *ExpContext) Operator() IOperatorContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOperatorContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOperatorContext)
}

func (s *ExpContext) Literal() ILiteralContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILiteralContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILiteralContext)
}

func (s *ExpContext) Qualifiedidentifier() IQualifiedidentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQualifiedidentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQualifiedidentifierContext)
}

func (s *ExpContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitExp(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Exp() (localctx IExpContext) {
	localctx = NewExpContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, JSONFilterParserRULE_exp)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Selector()
	}
	{
		p.SetState(44)
		p.Operator()
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(45)
			p.Literal()
		}

	case 2:
		{
			p.SetState(46)
			p.Qualifiedidentifier()
		}

	}

	return localctx
}

// ISelectorContext is an interface to support dynamic dispatch.
type ISelectorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSelectorContext differentiates from other interfaces.
	IsSelectorContext()
}

type SelectorContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySelectorContext() *SelectorContext {
	var p = new(SelectorContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_selector
	return p
}

func (*SelectorContext) IsSelectorContext() {}

func NewSelectorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SelectorContext {
	var p = new(SelectorContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_selector

	return p
}

func (s *SelectorContext) GetParser() antlr.Parser { return s.parser }

func (s *SelectorContext) SEL_START() antlr.TerminalNode {
	return s.GetToken(JSONFilterParserSEL_START, 0)
}

func (s *SelectorContext) Qualifiedidentifier() IQualifiedidentifierContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IQualifiedidentifierContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IQualifiedidentifierContext)
}

func (s *SelectorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SelectorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SelectorContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitSelector(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Selector() (localctx ISelectorContext) {
	localctx = NewSelectorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, JSONFilterParserRULE_selector)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Match(JSONFilterParserSEL_START)
	}
	{
		p.SetState(50)
		p.Qualifiedidentifier()
	}

	return localctx
}

// IQualifiedidentifierContext is an interface to support dynamic dispatch.
type IQualifiedidentifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQualifiedidentifierContext differentiates from other interfaces.
	IsQualifiedidentifierContext()
}

type QualifiedidentifierContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQualifiedidentifierContext() *QualifiedidentifierContext {
	var p = new(QualifiedidentifierContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSONFilterParserRULE_qualifiedidentifier
	return p
}

func (*QualifiedidentifierContext) IsQualifiedidentifierContext() {}

func NewQualifiedidentifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QualifiedidentifierContext {
	var p = new(QualifiedidentifierContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSONFilterParserRULE_qualifiedidentifier

	return p
}

func (s *QualifiedidentifierContext) GetParser() antlr.Parser { return s.parser }

func (s *QualifiedidentifierContext) AllMember() []IMemberContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMemberContext)(nil)).Elem())
	var tst = make([]IMemberContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMemberContext)
		}
	}

	return tst
}

func (s *QualifiedidentifierContext) Member(i int) IMemberContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMemberContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMemberContext)
}

func (s *QualifiedidentifierContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(JSONFilterParserDOT)
}

func (s *QualifiedidentifierContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(JSONFilterParserDOT, i)
}

func (s *QualifiedidentifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QualifiedidentifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QualifiedidentifierContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case JSONFilterVisitor:
		return t.VisitQualifiedidentifier(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *JSONFilterParser) Qualifiedidentifier() (localctx IQualifiedidentifierContext) {
	localctx = NewQualifiedidentifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, JSONFilterParserRULE_qualifiedidentifier)

	defer func() {
		p.ExitRule()
	}()
